se ajust cambis en equivalencia kairos