@@ -2,6 +2,7 @@ package com.ejemplo.jwtlogin.app.core.repository;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -26,6 +27,16 @@ public class EquivalenciaProductosRepository {
 		}
 	}
 
+    public String deleteproducto(String codigo) {
+        String sql = "EXEC sp_bart_catalogo_precio_equivalencia_delete_codpro ?";
+        try {
+            return jdbcTemplate.queryForObject(sql, new Object[] { codigo }, String.class);
+        } catch (Exception e) {
+            // puedes loguear y devolver un JSON vacío o relanzar una excepción custom
+            return "{}";
+        }
+    }
+
 	public String delete(UUID equivalenciaProductosId) {
 		String sql = "EXEC sp_bart_catalogo_precio_equivalencia_delete ?";
 		try {
@@ -41,7 +52,7 @@ public class EquivalenciaProductosRepository {
 		List<String> result = jdbcTemplate.queryForList(sql, String.class);
 		// Une todas las filas en un solo JSON
 		List<String> cleaned = result.stream()
-				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).toList();
+				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).collect(Collectors.toList());
 
 		return "{\"productos_equivalencia\":[" + String.join(",", cleaned) + "]}";
 	}
@@ -51,7 +62,7 @@ public class EquivalenciaProductosRepository {
 		List<String> result = jdbcTemplate.queryForList(sql, String.class);
 		// Une todas las filas en un solo JSON
 		List<String> cleaned = result.stream()
-				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).toList();
+				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).collect(Collectors.toList());
 
 		return "{\"productos\":[" + String.join(",", cleaned) + "]}";
 	}
@@ -61,7 +72,7 @@ public class EquivalenciaProductosRepository {
 		List<String> result = jdbcTemplate.queryForList(sql, String.class);
 		// Une todas las filas en un solo JSON
 		List<String> cleaned = result.stream()
-				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).toList();
+				.map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r).collect(Collectors.toList());
 
 		return "{\"productos\":[" + String.join(",", cleaned) + "]}";
 	}
