@@ -1,6 +1,7 @@
 package com.ejemplo.jwtlogin.app.core.repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -32,7 +33,7 @@ public class KairosProductosRepository {
 	    // Une todas las filas en un solo JSON
 	    List<String> cleaned = result.stream()
 	            .map(r -> r.startsWith("[") && r.endsWith("]") ? r.substring(1, r.length() - 1) : r)
-	            .toList();
+	            .collect(Collectors.toList());;
 
 	    return "{\"productos\":[" + String.join(",", cleaned) + "]}";
 	}
